--- a/index.html
+++ b/index.html
@@ -1778,14 +1778,14 @@ content: "";
             We make it easy to get started. And your website is launched within 1-2 weeks!
         </p>
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; margin-top: 30px; text-align: center;">
-          <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7851a9 !important;">
+          <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7951a94e !important;">
             <i class="fas fa-circle" ></i>
             <h4>Schedule a Consultation</h4>
             <p style="text-align: center; "> 
               Book a <a href="https://calendly.com/webeaze/free-consultation">free consultation</a> to discuss your needs and goals. We'll help you choose the right package.
             </p>
           </div>
-          <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7851a9 !important;">
+          <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7951a94e !important;">
             <i class="fas fa-circle"></i>
             <h4>
                 Choose your Package
@@ -1794,7 +1794,7 @@ content: "";
               Select a package that fits your needs. We offer flexible options for all budgets.
             </p>
           </div>
-          <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7851a9 !important;">
+          <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7951a94e !important;">
             <i class="fas fa-circle" ></i>
             <h4>
                 Website Build and Support
@@ -1825,7 +1825,7 @@ content: "";
                 Simple pricing built for small businesses. 
                 <br> 
 
-                Monthly plans require adding a one-time <strong><a href="https://webeaze.tawk.help/article/webeaze-subscriptions" style="font-weight: bold;">$299 setup fee</a></strong> to your cart before checkout.
+                Monthly plans require adding a one-time <strong><a href="https://webeaze.tawk.help/article/setup-fee" style="font-weight: bold;">$299 setup fee</a></strong> to your cart before checkout.
 
 
                 <br>
@@ -1869,7 +1869,7 @@ content: "";
                     <a href="https://ibisprep.com" target="_blank">ibisprep.com</a>
                 </div>
                 <div class="card">
-                    <img src="images/GalaxyLogo2-1.webp" alt="Galaxy Gymnastics Logo" class="portfolio-img">
+                    <img src="images/GalaxyLogo2-1.webp" alt="Galaxy Gymnastics Logo" style="width: 30%" >
                     <h3>Galaxy Gymnastics</h3>
                     <a href="https://galaxygymnast.com" target="_blank">galaxygymnast.com</a>
                 </div>
