--- a/portal.html
+++ b/portal.html
@@ -1431,7 +1431,7 @@ p strong, p b, strong, b {
                         <li><a href="website-request.html"><u>Submit a Request</u> (fastest)</a></li>
                         <li><u><a href="https://calendly.com/webeaze/session-full-setups" target="_blank">Zoom Live Session</a></u></li>
                         <li>
-                            <u><a href="https://tawk.to/chat/67ea7c80d3fdf2190fe8255d/1inlvcln3" target="_blank">Chat with us</a></u>: Thursday & Friday from 9am-5pm ET. Weekends from 9am - midnight ET. 
+                            <u><a href="https://tawk.to/chat/67ea7c80d3fdf2190fe8255d/1inlvcln3" target="_blank">Chat with us</a></u> (M-F 9AM - 5PM ET)</li>
                          </li>
                         <!-- <li><a href="#track-request">Track Your Request (coming soon!)</a></li> -->
                     </ul>
