--- a/website-request.html
+++ b/website-request.html
@@ -1441,8 +1441,9 @@
                 <option value="Urgent Website Request">URGENT, site down</option>
                 <option value="Paid Ad Campaign Request">Paid Ad Campaign Request</option>
                 <option value="Add-on Request">Add-on Request</option>
+                <option value="Site Deactivation/Reactivation">Pause Subscription/Site</option>
                 <option value="Feedback">Feedback</option>
-                <option value="Additional Website Request">Other</option>
+                <option value="Other Inquiry">Other</option>
               </select>
           
               <label>How can we help? *</label>
