--- a/portal.html
+++ b/portal.html
@@ -31,6 +31,9 @@
     <meta name="twitter:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
     <meta name="twitter:image" content="images/favicon.png">
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4466809892932219"
+     crossorigin="anonymous"></script>
+
 </head>
 
 <style>
