--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta name="twitter:title" content="WebEaze - Stunning, Affordable Websites.">
     <meta name="twitter:description" content="WebEaze is a web design agency who creates stunning, affordable websites with unlimited support. We proudly serve educators, travel agents, and local trades. ">
     <meta name="twitter:image" content="images/default-monochrome.png">
+    <meta name="google-adsense-account" content="ca-pub-4466809892932219">
 
 </head>
 
