--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         width: 100vw;
         overflow-x: hidden; 
         box-sizing: border-box;
+        scroll-behavior: smooth; 
 
 
     }
@@ -1627,15 +1628,18 @@ content: "";
 
 
 <div style="text-align: center; margin-top: 2rem;">
-    <svg width="30" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M12 5V19M12 19L5 12M12 19L19 12" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <animate attributeName="d" values="
-          M12 5V19M12 19L5 12M12 19L19 12;
-          M12 8V22M12 22L5 15M12 22L19 15;
-          M12 5V19M12 19L5 12M12 19L19 12
-        " dur="1.5s" repeatCount="indefinite"/>
-      </path>
-    </svg>
+    <a href="#who-we-help" style="display: inline-block; text-decoration: none;">
+        <svg width="30" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 5V19M12 19L5 12M12 19L19 12" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <animate attributeName="d" values="
+              M12 5V19M12 19L5 12M12 19L19 12;
+              M12 8V22M12 22L5 15M12 22L19 15;
+              M12 5V19M12 19L5 12M12 19L19 12
+            " dur="1.5s" repeatCount="indefinite"/>
+          </path>
+        </svg>
+      </a>
+
     <br>
     <br>
 
@@ -1716,7 +1720,7 @@ content: "";
        
 
 
-  <section style="background: #5D4037; padding: 60px 20px; border-radius: 0;">
+  <section id="who-we-help" style="background: #5D4037; padding: 60px 20px; border-radius: 0;">
     <h2 style="font-size: 30px; color: white; text-align: center; " class="fade-in-on-scroll">Who We Help</h2>
   
     <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; margin-top: 30px; text-align: center;">
