--- a/index.html
+++ b/index.html
@@ -1787,14 +1787,14 @@ content: "";
         </p>
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; margin-top: 30px; text-align: center;">
           <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7951a94e !important;">
-            <i class="fas fa-circle" ></i>
+            <i class="fas fa-check-circle" ></i>
             <h4>Schedule a Consultation</h4>
             <p style="text-align: center; "> 
               Book a <a href="https://calendly.com/webeaze/free-consultation">free consultation</a> to discuss your needs and goals. We'll help you choose the right package.
             </p>
           </div>
           <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7951a94e !important;">
-            <i class="fas fa-circle"></i>
+            <i class="fas fa-check-circle"></i>
             <h4>
                 Choose your Package
             </h4>
@@ -1803,7 +1803,7 @@ content: "";
             </p>
           </div>
           <div class="who-we-help-card fade-in-on-scroll" style="background-color: #7951a94e !important;">
-            <i class="fas fa-circle" ></i>
+            <i class="fas fa-check-circle" ></i>
             <h4>
                 Website Build and Support
             </h4>          
