--- a/site-map.html
+++ b/site-map.html
@@ -1190,7 +1190,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html#setup-packages-heading">Pricing</a>
+                  <a class="nav-link" href="pricing.html">Pricing</a>
                 </li>
 
                 <li class="nav-item">
