--- a/blog.html
+++ b/blog.html
@@ -1300,7 +1300,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html#setup-packages-heading">Pricing</a>
+                  <a class="nav-link" href="pricing.html">Pricing</a>
                 </li>
 
                 <li class="nav-item">
