--- a/contact-us.html
+++ b/contact-us.html
@@ -1398,7 +1398,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html#setup-packages-heading">Pricing</a>
+                  <a class="nav-link" href="pricing.html">Pricing</a>
                 </li>
 
                 <li class="nav-item">
