--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebEaze: Stunning, Affordable Websites</title>
+    <meta name="keywords" content="WebEaze, web design, affordable websites, unlimited support, educators, travel agents, local trades, website setup, web design agency">
     <meta name="description" content="WebEaze creates stunning, affordable websites with unlimited support. We proudly serve educators, travel agents, and local trades.">
     <link href="css/billy-joinville.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
