--- a/pricing.html
+++ b/pricing.html
@@ -15,14 +15,15 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Consultation | WebEaze</title>
-    <meta name="description" content="Elegant & Effortless. Affordable. With Personalized Support.">
+    <title>Pricing | WebEaze</title>
+    <meta name="keywords" content="WebEaze, pricing, website setup, affordable web design, personalized support, elegant websites, effortless web solutions">
+    <meta name="description" content="View our pricing plans for WebEaze, designed to be elegant, effortless, and affordable with personalized support.">
     <link href="css/billy-joinville.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <meta property="og:title" content="WebEaze">
     <meta property="og:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
-    <meta property="og:url" content="https://www.webeaze.io/consultation.html">
+    <meta property="og:url" content="https://www.webeaze.io/pricing.html">
     <meta property="og:image" content="images/favicon.png">
 
     <meta name="twitter:card" content="images/favicon.png">
@@ -285,12 +286,7 @@
 
      
 
-        #plan-features-free-consultation {
-            font-size: 16px;
-            color: white;
-            text-align: left;
-            margin-top: 20px;
-        }
+    
 
         #free-consultation, #full-setup {
 
@@ -1576,7 +1572,7 @@
 
     <p><a href="site-map.html">Site Map</a></p>
 
-    <p><a href="consultation.html">Back to Top</a></p>
+    <p><a href="pricing.html">Back to Top</a></p>
 
     <br>
  
