--- a/pricing.html
+++ b/pricing.html
@@ -1340,6 +1340,10 @@
   color: #ccc;
 }
 
+.table-responsive {
+    margin: 0 auto;
+}
+
 
 
 
@@ -1464,7 +1468,9 @@
                 <tbody>
                   <tr><td>Custom Website Design</td><td><i class="fas fa-check"></i></td><td><i class="fas fa-check"></i></td><td><i class="fas fa-check"></i></td></tr>
                   <tr><td>Domain & Hosting Setup</td><td> <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i></td></tr>
+                  <tr><td><a href="https://webeaze.tawk.help/article/domain-credit" target="_blank">$50 Domain Credit</a></td><td> <i class="fas fa-times"></i></td><td> <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i><br>100% covered</td></tr>
                   <tr><td>Mobile Optimization</td><td> <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i></td></tr>
+                  
                   <tr><td>SEO Tools</td><td> <i class="fas fa-times"></i></td><td> <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i></td></tr>
                   <tr><td>Unlimited Support</td><td>Email Only</td><td>Email + Live Chat</td><td>Priority Zoom + Chat</td></tr>
                   <tr><td>Ad Campaign Management</td><td><i class="fas fa-times"></i></td><td>
