--- a/pricing.html
+++ b/pricing.html
@@ -1501,6 +1501,15 @@
                 <div class="faq-question">What payment methods do you accept?<span class="arrow">&#9660;</span></div>
                 <div class="faq-answer">We accept all major credit cards, debit cards, and PayPal. All transactions are securely processed through Stripe.</div>
             </div>
+
+            <div class="faq-item">
+                <div class="faq-question">Why should I choose WebEaze?<span class="arrow">&#9660;</span></div>
+                <div class="faq-answer">
+                    WebEaze is designed for small businesses. We offer simple, transparent pricing with no hidden fees. In addition, we operate on a relationship-first model,meaning we know and care about your business from our first interaction. Our plans include everything you need to get started online, and our team is here to support you every step of the way. 
+                </div>
+            </div>
+
+            
           </section>
 
           <br>
