--- a/pricing.html
+++ b/pricing.html
@@ -412,10 +412,11 @@
             margin: 0 auto;
             border-radius: 8px;
             transition: background-color 0.3s;
+            font-weight: bold;
         }
 
         .faq-question:hover {
-            background-color: rgba(255, 255, 255, 0.05);
+            background-color: #7851a9;
         }
 
         .arrow {
@@ -440,6 +441,7 @@
             opacity: 0;
             overflow: hidden;
             color: white;
+            max-width: 900px;
         }
 
 
@@ -1493,10 +1495,7 @@
               <div class="faq-question">Is the $299 setup fee required for monthly plans?<span class="arrow">&#9660;</span></div>
               <div class="faq-answer">Yes, the one-time $299 setup fee is required for monthly plans. Yearly plans include this at no additional charge, so please don't add this to checkout if you're subscribing to a yearly plan.</div>
             </div>
-            <div class="faq-item">
-              <div class="faq-question">Can I switch from monthly to yearly later?<span class="arrow">&#9660;</span></div>
-              <div class="faq-answer">Absolutely. You can upgrade at any time from your client portal or by contacting our support. </div>
-            </div>
+
             <div class="faq-item">
                 <div class="faq-question">What payment methods do you accept?<span class="arrow">&#9660;</span></div>
                 <div class="faq-answer">We accept all major credit cards, debit cards, and PayPal. All transactions are securely processed through Stripe.</div>
@@ -1508,6 +1507,13 @@
                     WebEaze is designed for small businesses. We offer simple, transparent pricing with no hidden fees. In addition, we operate on a relationship-first model, meaning we know and care about your business from our first interaction. Our plans include everything you need to get started online, and our team is here to support you every step of the way. 
                 </div>
             </div>
+
+            <div class="faq-item">
+                <div class="faq-question">Can I switch from monthly to yearly later on?<span class="arrow">&#9660;</span></div>
+                <div class="faq-answer">Absolutely. You can upgrade at any time from your client portal or by contacting our support. The one-time setup fee will be waived if you switch to a yearly plan, however, you may not downgrade plans within a 12-month period. This means if you switch from Essential to Growth, you can't switch back to Essential if you change your mind later.</div>
+
+         
+              </div>
 
             
           </section>
