--- a/pricing.html
+++ b/pricing.html
@@ -1498,7 +1498,7 @@
 
             <div class="faq-item">
                 <div class="faq-question">What payment methods do you accept?<span class="arrow">&#9660;</span></div>
-                <div class="faq-answer">We accept all major credit cards, debit cards, and PayPal. All transactions are securely processed through Stripe.</div>
+                <div class="faq-answer">We accept all major credit cards, debit cards, and Link. All transactions are securely processed through Stripe.</div>
             </div>
 
             <div class="faq-item">
