--- a/portal.html
+++ b/portal.html
@@ -107,10 +107,6 @@
 
         /* end of ontact-form styling */ 
 
-    footer{
-
-        
-    }
 
     html, body, main, header, footer, section {
         margin: 0;
@@ -118,6 +114,7 @@
         width: 100vw;
         overflow-x: hidden; 
         box-sizing: border-box;
+        scroll-behavior: smooth !important;
      
     }
 
@@ -228,7 +225,7 @@
             text-align: center;     
             padding: 40px;
    
-            margin: 0 auto;          
+            margin: 0 auto;         
         }
 
 
