--- a/pricing.html
+++ b/pricing.html
@@ -1476,8 +1476,8 @@
                   <tr><td>SEO Tools</td><td> <i class="fas fa-times"></i></td><td> <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i></td></tr>
                   <tr><td>Unlimited Support</td><td>Email Only</td><td>Email + Live Chat</td><td>Priority Zoom + Chat</td></tr>
                   <tr><td>Ad Campaign Management</td><td><i class="fas fa-times"></i></td><td>
-                    <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i></td></tr>
-                    <tr><td>Monthly Performance Reports</td><td><i class="fas fa-times"></i></td><td> <i class="fas fa-check"></i></td><td> <i class="fas fa-check"></i></td></tr>
+                    <i class="fas fa-times"></i></td><td> <i class="fas fa-check"></i></td></tr>
+                    <tr><td>Monthly Performance Reports</td><td><i class="fas fa-times"></i></td><td> <i class="fas fa-check"></i><br>Upon Request</td><td> <i class="fas fa-check"></i></td></tr>
                     
     
                 </tbody>
