--- a/blog.html
+++ b/blog.html
@@ -1474,11 +1474,11 @@ We know this is a big change, but we believe this was the right decision for us.
 
 <footer>
     <div class="social-media-links">
-        <a href="https://www.facebook.com/share/129pv5HzLz7/?mibextid=LQQJ4d" target="_blank" aria-label="Facebook">
+        <a href="https://www.facebook.com/61568824951084" target="_blank" aria-label="Facebook">
             <i class="fab fa-facebook"></i>
         </a>
 
-        <a href="https://www.linkedin.com/company/billy-joinville-web-services/" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/company/webeaze/" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
         </a>
 
