--- a/pricing.html
+++ b/pricing.html
@@ -1576,8 +1576,8 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr><td data-label="Feature">Custom Website Design</td><td data-label="Essential"><i class="fas fa-check"></i></td><td data-label="Growth"><i class="fas fa-check"></i></td>
-                    <td data-label="Elite"><i class="fas fa-check"></i></td></tr>
+                  <tr><td data-label="Feature">Custom Website Design</td><td data-label="Essential"><i class="fas fa-check"></i><br> Up to 3 pages</td><td data-label="Growth"><i class="fas fa-check"></i><br> Up to 6 pages</td>
+                    <td data-label="Elite"><i class="fas fa-check"></i><br> Unlimited Pages</td></tr>
 
                   <tr><td data-label="Feature">Domain & Hosting Setup</td><td data-label="Essential"> <i class="fas fa-check"></i></td>
                     <td data-label="Growth"> <i class="fas fa-check"></i></td><td data-label="Elite"> <i class="fas fa-check"></i></td>
@@ -1609,6 +1609,8 @@
               <div class="faq-question">Is the $299 setup fee required for monthly plans?<span class="arrow">&#9660;</span></div>
               <div class="faq-answer">Yes, the one-time $299 setup fee is required for monthly plans. Yearly plans include this at no additional charge, so please don't add this to checkout if you're subscribing to a yearly plan.</div>
             </div>
+
+            
 
             <div class="faq-item">
                 <div class="faq-question">What payment methods do you accept?<span class="arrow">&#9660;</span></div>
