Update to footer
added help center and replaced client portal to remain consistent

--- a/faq.html
+++ b/faq.html
@@ -1362,7 +1362,7 @@
         <a href="about.html">About WebEaze</a>
     </p>
     <p>
-        <a href="portal.html">Client Portal</a>
+        <a href="https://webeaze.tawk.help">Help Center</a>
     </p>
 
     <p>
