--- a/portal.html
+++ b/portal.html
@@ -1550,7 +1550,7 @@ p strong, p b, strong, b {
         <a href="about.html">About WebEaze</a>
     </p>
     <p>
-        <a href="portal.html">Client Portal (current)</a>
+        <a href="https://webeaze.tawk.help">Help Center</a>
     </p>
 
     <p>
