--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1283,9 +1283,8 @@ Thank you for choosing WebEaze. We appreciate your business. Please read our ref
         <a href="about.html">About WebEaze</a>
     </p>
     <p>
-        <a href="portal.html">Client Portal</a>
+        <a href="https://webeaze.tawk.help">Help Center</a>
     </p>
-
     <p>
         <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
     </p>
