--- a/blog.html
+++ b/blog.html
@@ -1493,7 +1493,7 @@ We know this is a big change, but we believe this was the right decision for us.
         <a href="about.html">About WebEaze</a>
     </p>
     <p>
-        <a href="portal.html">Client Portal</a>
+        <a href="https://webeaze.tawk.help">Help Center</a>
     </p>
 
     <p>
