--- a/index.html
+++ b/index.html
@@ -2146,7 +2146,7 @@ content: "";
         <a href="about.html">About WebEaze</a>
     </p>
     <p>
-        <a href="portal.html">Client Portal</a>
+        <a href="https://webeaze.tawk.help">Help Center</a>
     </p>
 
     <p>
