--- a/website-request.html
+++ b/website-request.html
@@ -1485,7 +1485,7 @@
         <a href="about.html">About WebEaze</a>
     </p>
     <p>
-        <a href="portal.html">Client Portal</a>
+        <a href="https://webeaze.tawk.help">Help Center</a>
     </p>
 
     <p>
