--- a/portal.html
+++ b/portal.html
@@ -1174,11 +1174,11 @@
     font-family: 'Poppins', sans-serif; 
     font-size: 30px;
     font-weight: bold; 
-    background: linear-gradient(to bottom, #7851a9, #fff7f5);
+    background: linear-gradient(to bottom, #a476dd, #d18f7b);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; 
     background-clip: text; 
-    text-fill-color: transparent; 
+    -webkit-text-fill-color: transparent; 
 }
 
 p {
