--- a/site-map.html
+++ b/site-map.html
@@ -32,6 +32,18 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JQM6ZR4JCB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JQM6ZR4JCB');
+</script>
+
+
+
     <style>
 
     .services-cards-container {
