--- a/pricing.html
+++ b/pricing.html
@@ -1475,7 +1475,10 @@
 
     
 
+    
+
     <header id="header-services">
+
 
 
         <!-- <iframe src="status-snippet.html" style="width: 100%; border: none; height: auto; display: block; padding: 0; margin: 0; margin-top: 20px; color: yellow;" onload="this.style.height=this.contentWindow.document.body.scrollHeight + 'px';"></iframe> -->
@@ -1571,6 +1574,8 @@
 
 
         </div>
+
+        <section style="background-color:#000000; padding: 60px 20px; text-align: center; border-radius: 0;"> <h2 style="color: white; font-size: 28px;">Celebrate Father's Day with 15% Off Website Plans</h2> <p style="color: white; font-size: 16px; max-width: 700px; margin: 20px auto; text-align: center;"> Whether you're a dad, working with one, or honoring one—this is the perfect time to upgrade your business website. For a limited time, all WebEaze plans are <strong>15% off</strong> through Father's Day. <br><br> Use code <strong>FATHER15</strong> at checkout. Offer valid through June 16. </p> </section>
 
         <section style="background-color:#5D4037; padding: 40px 20px; color: white; border-radius: 0;">
             <h2 style="text-align:center; margin-bottom: 30px;">What's Included in Each Plan</h2>
