--- a/pricing.html
+++ b/pricing.html
@@ -1461,6 +1461,20 @@
   }
 }
 
+.cta-learn-more {
+  background-color: #000000;
+  color: #5D4037;
+  padding: 15px 30px;
+  border-radius: 50px;
+  font-weight: bold;
+  font-size: 16px;
+  text-decoration: none;
+  display: inline-block;
+  transition: transform 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 15px #5D4037;
+  align-items: center !important;
+}
+
 
 
 
@@ -1613,6 +1627,24 @@
               </table>
             </div>
           </section>
+
+          <section style="background: radial-gradient(circle, #000000 0%, #7851a9 100%) !important; padding: 60px 20px; text-align: center; border-radius: 0;"> <h2 style="color: white; font-size: 28px;">NEW: Paid Ad Management</h2> <p style="color: white; font-size: 16px; max-width: 700px; margin: 20px auto; text-align: center;"> Our Elite plan includes comprehensive paid ad management service to help you reach your target audience effectively. This service includes:</p>
+            <ul style="list-style-type: none; padding: 0; color: white; font-size: 16px; text-align: left; max-width: 600px; margin: 0 auto;">
+                <li><i class="fas fa-check"></i> Campaign Strategy Development</li>
+                <li><i class="fas fa-check"></i> Ad Creation and Design</li>
+                <li><i class="fas fa-check"></i> Target Audience Research</li>
+                <li><i class="fas fa-check"></i> Ongoing Campaign Optimization</li>
+                <li><i class="fas fa-check"></i> Monthly Performance Reports</li>
+            </ul>
+
+            <br>
+            <br>
+
+            <p style="color: white; font-size: 16px; max-width: 700px; margin: 20px auto; text-align: center;"> Our Essential and Growth plans offer this service as an add-on for $199 per month. This allows you to scale your marketing efforts as your business grows.</p>
+
+            <a href="https://webeaze.tawk.help/article/paid-ad-management" class="cta-learn-more">Learn More</a> </section>
+      
+            </section>
           
 
         <section class="faq-section" id="pricing-faq" style="background-color: #5D4037 !important; border-radius: 0;">
