--- a/index.html
+++ b/index.html
@@ -1175,6 +1175,7 @@
 
         .nav-link {
             color: black !important;
+            font-family: Poppins, sans-serif;
         }
 
         #website-setup-section {
