--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1272,43 +1272,51 @@ Thank you for choosing WebEaze. We appreciate your business. Please read our ref
 
 <br>
 
-<footer>
-    <div class="social-media-links">
-        <a href="https://www.facebook.com/61568824951084" target="_blank" aria-label="Facebook">
-            <i class="fab fa-facebook"></i>
-        </a>
+<footer class="webeaze-footer">
+    <div class="footer-grid">
+  
+      <div class="footer-col">
+        <h4>WebEaze</h4>
+        <p>Stunning websites with support that scales with your business. One plan. One price. One powerful online presence.</p>
 
-        <a href="https://www.linkedin.com/company/webeaze/" target="_blank" aria-label="LinkedIn">
-            <i class="fab fa-linkedin"></i>
+      </div>
+  
+      <div class="footer-col">
+        <h4>Stay Connected</h4>
+        <p>We're on Facebook, LinkedIn, and Instagram. Follow us for updates, tips, and our latest offers! 
+        </p>
+        <div class="social-icons">
+          <a href="https://facebook.com/61568824951084" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://linkedin.com/company/webeaze" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://instagram.com/webeaze.io" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+  
+      <div class="footer-col">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="https://webeaze.tawk.help">Help Center</a></li>
+          <li><a href="https://billyjoinville.me/terms">Terms & Privacy</a></li>
+          <li><a href="site-map.html">Site Map</a></li>
+          <li><a href="#top">Back to Top</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-col">
+        <h4>Our Recognition</h4>
+        <a href="https://www.designrush.com/agency/profile/webeaze" target="_blank">
+          <img src="images/designrush-profile.svg" alt="WebEaze verified agency on DesignRush" style="max-width: 100px; margin-bottom: 10px;">
         </a>
-
-        <a href="https://www.instagram.com/webeaze.io/" target="_blank" aria-label="Instagram">
-            <i class="fab fa-instagram"></i>
-        </a>
+        <script type="text/javascript" src="https://www.designrush.com/topbest/js/widgets/agency-reviews.js"></script>
+      </div>
+  
     </div>
-
-    <br>
-
-    <p>
-        <a href="about.html">About WebEaze</a>
-    </p>
-    <p>
-        <a href="https://webeaze.tawk.help">Help Center</a>
-    </p>
-    <p>
-        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
-    </p>
-
-    <p><a href="site-map.html">Site Map</a></p>
-
-    <p><a href="refund-policy.html">Back to Top</a></p>
-
-    <br>
- 
-    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on <a href="https://pages.github.com/">Github</a>.</p>
-    <br>
-
-</footer>
+  
+    <div class="footer-bottom">
+      <p>© 2025 WebEaze. Created and designed by WebEaze. Published on <a href="https://pages.github.com/">GitHub</a>.</p>
+    </div>
+  </footer>
 
 
   
