--- a/pricing.html
+++ b/pricing.html
@@ -1576,6 +1576,8 @@
 
 
                 <br>
+                <br>
+                <br>
  
 
             </p>
@@ -1730,7 +1732,7 @@
           <br>
           <br>
 
-          <section style="background: linear-gradient(to bottom, #7851a9, #5D4037); text-align: center; padding: 40px; border-radius: 0 !important;">
+          <section style="background: #7851a9; text-align: center; padding: 40px; border-radius: 0 !important;">
             <h2 style="color: white;">Ready to Get Started?</h2>
             <p style="color: white;">Choose a plan or book a free consultation to ask questions first.</p>
             <a href="https://calendly.com/webeaze/free-consultation" class="buy-now-btn">Request a Free Consultation</a>
