--- a/blog.html
+++ b/blog.html
@@ -1518,7 +1518,7 @@ We know this is a big change, but we believe this was the right decision for us.
         <a href="https://www.designrush.com/agency/profile/webeaze" target="_blank">
           <img src="images/designrush-profile.svg" alt="WebEaze verified agency on DesignRush" style="max-width: 100px; margin-bottom: 10px;">
         </a>
-        <script type="text/javascript" src="https://www.designrush.com/topbest/js/widgets/agency-reviews.js"></script>
+        <script type="text/javascript" src="https://www.designrush.com/topbest/js/widgets/agency-reviews.js"></script><div data-designrush-widget data-agency-id="86840" data-style="dark" aria-label="DesignRush agency reviews section"></div><noscript><a href="https://www.designrush.com/agency/profile/webeaze#reviews" target="_blank" aria-label="Visit WebEaze reviews on DesignRush">REVIEW US ON DESIGNRUSH</a></noscript>
       </div>
   
     </div>
