--- a/index.html
+++ b/index.html
@@ -2207,7 +2207,7 @@ content: "";
         <a href="https://www.designrush.com/agency/profile/webeaze" target="_blank">
           <img src="images/designrush-profile.svg" alt="WebEaze verified agency on DesignRush" style="max-width: 100px; margin-bottom: 10px;">
         </a>
-        <script type="text/javascript" src="https://www.designrush.com/topbest/js/widgets/agency-reviews.js"></script>
+        <script type="text/javascript" src="https://www.designrush.com/topbest/js/widgets/agency-reviews.js"></script><div data-designrush-widget data-agency-id="86840" data-style="dark" aria-label="DesignRush agency reviews section"></div><noscript><a href="https://www.designrush.com/agency/profile/webeaze#reviews" target="_blank" aria-label="Visit WebEaze reviews on DesignRush">REVIEW US ON DESIGNRUSH</a></noscript>
       </div>
   
     </div>
