--- a/website-request.html
+++ b/website-request.html
@@ -1465,7 +1465,7 @@ section:hover {
             
             <h1 id="title-of-service">WebEaze Help Center</h1>
             
-            <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> We have an extensive help center with answers to common questions. Just type in a few words of your question in the search bar below to find answers. </p>
+            <p style="color: white; font-size: 20px !important; max-width: 700px; margin: 20px auto; text-align: center;"> We have an extensive help center with answers to common questions. Just type in a few words in the search bar below to find answers. </p>
 
             <a href="https://webeaze.tawk.help" target="_blank" class="cta-button-schedule" style="background: #7851a9 !important">Visit Help Center</a>
 
