--- a/pricing.html
+++ b/pricing.html
@@ -1425,6 +1425,63 @@
   transform: translateY(-5px);
 }
 
+/* Pricing Table - Desktop  */
+.pricing-table-wrapper {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.table-bordered {
+  border-collapse: separate;
+  border-spacing: 0 15px;
+  background-color: transparent;
+}
+
+.table-bordered th {
+  background-color: #4e342e;
+  color: #fff;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 15px;
+  border: none;
+}
+
+.table-bordered td {
+  background-color: #6d4c41;
+  border: none;
+  border-radius: 8px;
+  padding: 20px 15px;
+  font-size: 16px;
+  vertical-align: middle;
+  color: white;
+}
+
+.table-bordered tr td:first-child {
+  font-weight: 600;
+  text-align: left;
+  background-color: #5d4037;
+}
+
+.table-bordered tr:hover td {
+  background-color: #795548;
+  transition: background-color 0.3s ease;
+}
+
+.table-bordered td i.fas.fa-check {
+  color: #81c784;
+  font-size: 18px;
+}
+
+.table-bordered td i.fas.fa-times {
+  color: #ef9a9a;
+  font-size: 18px;
+}
+
+.table-bordered td {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Pricing Table - Mobile */
 @media screen and (max-width: 768px) {
   .table thead {
     display: none;
@@ -1437,29 +1494,48 @@
 
   .table tr {
     margin-bottom: 20px;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     border-radius: 10px;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: #4e342e; /* Slightly lighter brown for clarity */
+    box-shadow: none; /* Remove shadow on mobile */
   }
 
   .table td {
     text-align: left;
-    padding-left: 50%;
+    padding: 12px 10px 12px 50%;
+    background-color: transparent; /* Neutralize colored backgrounds */
+    border: none;
+    box-shadow: none;
+    color: white;
     position: relative;
   }
 
   .table td::before {
+    content: attr(data-label);
     position: absolute;
     left: 10px;
-    top: 10px;
+    top: 12px;
     width: 45%;
-    white-space: nowrap;
-    font-weight: bold;
+    font-weight: 600;
     color: #ccc;
-    content: attr(data-label);
+    white-space: nowrap;
+  }
+
+  /* Prevent long data items from wrapping oddly */
+  .table td i.fas {
+    font-size: 16px;
+  }
+
+  .table td i.fas.fa-check {
+    color: #a5d6a7; /* lighter green for visibility on dark bg */
+  }
+
+  .table td i.fas.fa-times {
+    color: #ef9a9a;
   }
 }
+
 
 .cta-learn-more {
   background-color: #000000;
@@ -1484,6 +1560,8 @@
     border-radius: 0;
     
 }
+
+
 
 
 </style>
